--- a/src/main/webapp/WEB-INF/views/new_user.html
+++ b/src/main/webapp/WEB-INF/views/new_user.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="ISO-8859-1">
     <title>Create New User</title>
 </head>
 <body>
 <div align="center">
     <h1>Create New User</h1>
-    <br />
-    <form action="#" th:action="@{/save}" th:object="${user}"
-          method="post">
-
+    <br/>
+    <form action="#" th:action="@{/save}" th:object="${user}" method="post">
         <table border="0" cellpadding="10">
             <tr>
                 <td>User Name:</td>
@@ -21,17 +18,16 @@
                 <td>Lastname:</td>
                 <td><input type="text" th:field="*{lastname}" /></td>
             </tr>
+            <tr>
+                <td>Password:</td>
+                <td><input type="text" th:field="*{password}" /></td>
+            </tr>
 
             <tr>
-                <td colspan="2"><button type="submit">Save</button> </td>
+                <td colspan="2"><button type="submit">Save</button></td>
             </tr>
         </table>
-            </form>
-    <p>
-    <form th:action="@{/logout}" method="post">
-        <input type="submit" value="logout"/>
     </form>
-    </p>
 </div>
 </body>
 </html>
